--- a/.github/workflows/reusable_create_release.yml
+++ b/.github/workflows/reusable_create_release.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
         with:
-          path: ./bin/${{ inputs.build_configuration }}/${{ inputs.solution_name }}/*
+          path: ./bin/x64/${{ inputs.build_configuration }}/${{ inputs.solution_name }}/*
 
   deploy:
     needs: build
